# SecDev-RecipeBox

./: .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  zap.yaml
.github/: CODEOWNERS.md
.github/workflows/: ci-dast.yml  ci-iac-container.yml  ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
EVIDENCE/P09/: .keep  README.md  sbom.json  sca_report.json  sca_summary.md
EVIDENCE/P10/: README.md  sast_summary.md  semgrep.sarif
EVIDENCE/P11/: README.md  zap_baseline.html  zap_baseline.json
EVIDENCE/P12/: hardening_summary.md  trivy_config_report.json  trivy_fs_report.json
app/: main.py
app/dto/: dto.py
app/infrastructure/: db.py  map.py  repo.py
app/models/: domain.py  error.py  models.py
app/repos/: db.py  map.py  repo.py
app/schemas/: dto.py  error.py  orm.py
app/services/: service.py
app/shared/: config.py  db.py  limit.py  sqlite.py
docs/adr/: ADR-001-rfc7807.md  ADR-002-secrets.md  ADR-003-rate-limit.md
docs/nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
policy/: waivers.yml
security/: .gitleaks.toml  checkov.yaml  hadolint.yaml
security/semgrep/: rules.yml
tests/: conftest.py  test_internal_errors.py  test_not_found_errors.py  test_success.py  test_validation_errors.py
tests/fixtures/: mock.py  rate_limit.py
tests/unit/: test_health.py  test_not_found_errors.py  test_rate_limit.py  test_sql_injection.py  test_success.py  (+1 more)
(+7 files in other folders)
