[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipebox"
version = "0.1.0"
description = "API для хранения рецептов"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi~=0.121.1",
    "pydantic~=2.12.4",
    "pydantic_settings~=2.12.0",
    "python-dotenv~=1.2.1",
    "slowapi~=0.1.9",
    "SQLAlchemy~=2.0.44",
    "httpx~=0.28.0",
    "uvicorn~=0.38.0",
    "psycopg2-binary~=2.9.11",
]

[tool.ruff]
line-length = 100
lint.select = ["E","F","W","I"]
target-version = "py311"
exclude = ["venv",".venv","build","dist"]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line_length=100

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
